[package]
name = "gr-bin"
description = "Interact with remote repositories like you interact with git"
version = "0.1.2"
edition = "2021"
license = "MIT"
documentation = "https://github.com/daniel7grant/gr"
repository = "https://github.com/daniel7grant/gr"

[dependencies]
atty = "0.2.14"
base64 = "0.21.0"
clap = { version = "4.1.1", features = ["derive"] }
clap_complete = "4.1.0"
colored = "2.0.0"
dirs = "4.0.0"
eyre = "0.6.8"
git2 = { version = "0.16.0", default-features = false }
native-tls = "0.2.11"
open = "3.2.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
time = { version = "0.3.20", features = ["serde-well-known"] }
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.16", default-features = false, features = ["json"] }
ureq = { version = "2.6.2", default-features = false, features = ["gzip", "json", "native-tls"] }
urlencoding = "2.1.2"

[[bin]]
name = "gr"
path = "src/main.rs"

[profile.release]
strip = true
